--- a/provenance/templates/artworks_list.html
+++ b/provenance/templates/artworks_list.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Proveniență opere</title>
-  <script defer src="{% static 'js/load_artworks.js' %}"></script>
+  <script defer src="{% static 'js/load_artworks.js' %}?v=20260113"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
